--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3 class="guide__title">Debt-Free Student</h3>
             <p class="guide__price">₹49</p>
             <p class="guide__description">Learn how to manage loans, plan your budget, and start your journey to financial freedom with the Debt-Free Student guide.</p>
-            <a href="upi://pay?pa=charanthummuru54@okicici&pn=debtfreeNow&am=49&cu=INR" class="btn guide__btn">Buy Now</a>
+            <a href="#" class="btn guide__btn">Buy Now</a>
           </div>
         </article>
         <article class="guide">
@@ -56,7 +56,7 @@
             <h3 class="guide__title">The Dark Side of Slice Loan App</h3>
             <p class="guide__price">₹10</p>
             <p class="guide__description">Explore the hidden risks and costs of using the Slice Loan App and learn how to protect yourself financially.</p>
-            <a href="upi://pay?pa=charanthummuru54@okicici&pn=debtfreeNow&am=10&cu=INR" class="btn guide__btn">Buy Now</a>
+            <a href="#" class="btn guide__btn">Buy Now</a>
           </div>
         </article>
       </div>
