--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     if (isInstagramInAppBrowser()) {
       var overlay = document.createElement("div");
       overlay.id = "browserPromptOverlay";
-      overlay.innerHTML = "<h2>Open in Browser</h2><p>For the best experience, please open this page in your default browser. Tap the share icon and select 'Open in Browser'.</p>";
+      overlay.innerHTML = "<h2>Open in Browser</h2><p>For the best experience, please open this page in your default browser. Tap the menu  and select 'Open in Browser'.</p>";
       document.body.appendChild(overlay);
     }
   </script>
