--- a/index.html
+++ b/index.html
@@ -7,27 +7,15 @@
   <title>DebtfreeNow - Guides & Debt Report</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <!-- Chart.js, html2canvas and jsPDF libraries -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <!-- Razorpay Checkout script -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <!-- You can either add extra inline CSS here or keep it in styles.css -->
   <style>
-    /* Optional styling for the overlay prompt */
-    #browserPromptOverlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      color: #fff;
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-    }
+    /* (Optional inline CSS can go here) */
   </style>
 </head>
 <body>
@@ -78,7 +66,8 @@
             <h3 class="guide__title">Debt-Free Student</h3>
             <p class="guide__price">₹49</p>
             <p class="guide__description">Learn how to manage loans, plan your budget, and start your journey to financial freedom with the Debt-Free Student guide.</p>
-            <a href="#" class="btn guide__btn">Buy Now</a>
+            <!-- Razorpay integration: data-amount is in paise -->
+            <a href="#" class="btn guide__btn" data-amount="4900" data-title="Debt-Free Student">Buy Now</a>
           </div>
         </article>
         <article class="guide">
@@ -89,7 +78,8 @@
             <h3 class="guide__title">The Dark Side of Slice Loan App</h3>
             <p class="guide__price">₹10</p>
             <p class="guide__description">Explore the hidden risks and costs of using the Slice Loan App and learn how to protect yourself financially.</p>
-            <a href="#" class="btn guide__btn">Buy Now</a>
+            <!-- Razorpay integration: data-amount is in paise -->
+            <a href="#" class="btn guide__btn" data-amount="1000" data-title="The Dark Side of Slice Loan App">Buy Now</a>
           </div>
         </article>
       </div>
@@ -381,6 +371,37 @@
         }
       });
     }
+
+    // Razorpay Integration for "Buy Now" buttons
+    document.querySelectorAll('.guide__btn').forEach(btn => {
+      btn.addEventListener('click', function(e) {
+        e.preventDefault();
+        const amount = parseInt(this.getAttribute('data-amount')); // Amount in paise
+        const guideTitle = this.getAttribute('data-title');
+        var options = {
+          "key": "rzp_test_NnbEh1puZpKb4n", // Replace with your Razorpay Key ID
+          "amount": amount,
+          "currency": "INR",
+          "name": "DebtfreeNow",
+          "description": guideTitle,
+          "image": "https://res.cloudinary.com/dqakzmdij/image/upload/v1738412284/logo_svg_lavc3x.svg",
+          "handler": function (response){
+              alert("Payment Successful! Payment ID: " + response.razorpay_payment_id);
+              // Implement further logic such as delivering the guide or redirecting the user
+          },
+          "prefill": {
+              "name": "",
+              "email": "",
+              "contact": ""
+          },
+          "theme": {
+              "color": "#1dbf73"
+          }
+        };
+        var rzp1 = new Razorpay(options);
+        rzp1.open();
+      });
+    });
   </script>
 </body>
 </html>
