--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KDQPJ509D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KDQPJ509D7');
+</script>
+  
   <meta charset="UTF-8">
   <meta name="description" content="DebtfreeNow helps you manage debt with expert guides and a personalized debt report.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
